Fixed user message word wrapping issue

--- a/src/main/frontend/src/app/sites/user/user-detail/user-detail.component.css
+++ b/src/main/frontend/src/app/sites/user/user-detail/user-detail.component.css
@@ -44,6 +44,7 @@ h6 {
   height: auto;
   min-height: 60px;
   border: solid 1px #000;
+  word-wrap: break-word;
 }
 
 
